# TMLCS-TUI

./: .clang-format  .clang-tidy  .editorconfig  .gitignore  CHANGELOG.md  CMakeLists.txt  CONTRIBUTING.md  Doxyfile  LICENSE  Makefile  README.md  SECURITY.md  main.c  mi_tui  tmlcs-tui.pc
.github/workflows/: benchmark.yml  ci-expanded.yml  ci.yml  fuzz.yml
docs/: ACTION_PLAN.md  API.md  AUDIT.md  AUDIT_2026_04.md  AUDIT_2026_04_v2.md  EXECUTION_REPORT.md  QUALITY_AUDIT_AND_PLAN.md  QUALITY_PLAN.md
docs/superpowers/specs/: 2026-04-06-tmlcs-tui-v1-roadmap-design.md
examples/: common.c  common.h  demo.c  demo_agents.c  demo_browse.c  demo_console.c  demo_desktop.c  demo_development.c  demo_files.c  demo_finance.c  demo_log.c  demo_system.c  hello_world.c  tabs_demo.c  text_input_demo.c  workspace_agents.c  workspace_browse.c  workspace_console.c  workspace_desktop.c  workspace_development.c  workspace_files.c  workspace_finance.c  workspace_log.c  workspace_system.c
include/: tmlcs_tui.h
include/core/: anim.h  clipboard.h  debug.h  error.h  help.h  keymap.h  layout.h  logger.h  loop.h  manager.h  tab.h  theme.h  theme_loader.h  types.h  types_private.h  utf8.h  widget.h  window.h  workspace.h
include/widget/: button.h  checkbox.h  context_menu.h  dialog.h  dropdown.h  file_picker.h  label.h  list.h  progress.h  radio_group.h  slider.h  spinner.h  tab_container.h  table.h  text_input.h  textarea.h  tree.h
src/: main.c
src/core/: anim.c  clipboard.c  debug.c  error.c  help.c  keymap.c  layout.c  logger.c  loop.c  manager.c  tab.c  theme_loader.c  utf8.c  widget.c  window.c  workspace.c
src/core/manager/: input.c  render.c  state.c  utils.c
src/widget/: button.c  checkbox.c  context_menu.c  dialog.c  dropdown.c  file_picker.c  label.c  list.c  progress.c  radio_group.c  slider.c  spinner.c  tab_container.c  table.c  text_input.c  textarea.c  tree.c
tests/: benchmark_render.c  nc_stubs.c  test_clipboard.c  test_context_menu.c  test_dialog.c  test_dropdown.c  test_file_picker.c  test_integration.c  test_keymap.c  test_layout.c  test_logger.c  test_logger_extended.c  test_loop.c  test_manager_input.c  test_manager_render.c  test_manager_state.c  test_manager_utils.c  test_radio_group.c  test_slider.c  test_spinner.c  test_tab.c  test_tab_container.c  test_table.c  test_text_input.c  test_theme_loader.c  test_tree.c  test_utf8.c  test_widgets.c  test_window.c  test_workspace.c  unity.h
tests/fuzz/: fuzz_list.c  fuzz_text_input.c  fuzz_textarea.c
tests/fuzz/corpus/: long.txt  unicode.txt
tests/property/: test_text_input_properties.c  test_utf8_properties.c
